--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,39 +1,50 @@
-Equipes
-EST
-ATLANTIC
-Boston Celtics
-Brooklyn Nets
-New York Knicks
-Philadelphia 76ers
-Toronto Raptors
-CENTRAL
-Chicago Bulls
-Cleveland Cavaliers
-Detroit Pistons
-Indiana Pacers
-Milwaukee Bucks
-SOUTHEAST
-Atlanta Hawks
-Charlotte Hornets
-Miami Heat
-Orlando Magic
-Washington Wizards
-OUEST
-NORTHWEST
-Denver Nuggets
-Minnesota Timberwolves
-Oklahoma City Thunder
-Portland Trail Blazers
-Utah Jazz
-PACIFIC
-Golden State Warriors
-LA Clippers
-Los Angeles Lakers
-Phoenix Suns
-Sacramento Kings
-SOUTHWEST
-Dallas Mavericks
-Houston Rockets
-Memphis Grizzlies
-New Orleans Pelicans
-San Antonio Spurs
+<h1>Equipes</h1><br />
+<h2>EST</h2><br />
+<h3>ATLANTIC</h3><br />
+<h4>
+    Boston Celtics<br />
+    Brooklyn Nets<br />
+    New York Knicks<br />
+    Philadelphia 76ers<br />
+    Toronto Raptors<br />
+</h4>
+<h3>CENTRAL</h3><br />
+<h4>
+    Chicago Bulls<br />
+    Cleveland Cavaliers<br />
+    Detroit Pistons<br />
+    Indiana Pacers<br />
+    Milwaukee Bucks<br />
+</h4>
+<h3>SOUTHEAST</h3><br />
+<h4>
+    Atlanta Hawks<br />
+    Charlotte Hornets<br />
+    Miami Heat<br />
+    Orlando Magic<br />
+    Washington Wizards<br />
+</h4>
+<h3> OUEST NORTHWEST</h3><br />
+<h4>
+    Denver Nuggets<br />
+    Minnesota Timberwolves<br />
+    Oklahoma City Thunder<br />
+    Portland Trail Blazers<br />
+    Utah Jazz<br />
+</h4>
+<h3>PACIFIC</h3><br />
+<h4>
+    Golden State Warriors<br />
+    LA Clippers<br />
+    Los Angeles Lakers<br />
+    Phoenix Suns<br />
+    Sacramento Kings<br />
+</h4>
+<h3>SOUTHWEST</h3><br />
+<h4>
+    Dallas Mavericks<br />
+    Houston Rockets<br />
+    Memphis Grizzlies<br />
+    New Orleans Pelicans<br />
+    San Antonio Spurs<br />
+</h4>
