--- a/03-liens/dossier1/dossier3/fichier3.html
+++ b/03-liens/dossier1/dossier3/fichier3.html
@@ -1,17 +1,17 @@
 <!doctype html>
-	<html>
-		<head>
-		</head>
-		<body>
-			<h1>fichier 3</h1>
-			<img src="../images/3.gif" />
-			<br />
-			fichier
-			<br />
-			fichier 2
-			<br />
-			fichier 3
-			<br />
-			fichier 4
-		</body>
-	</html>
+<html>
+    <head>
+    </head>
+    <body>
+        <h1>fichier 3</h1>
+        <img src="../../images/3.gif"/>
+        <br />
+        <a href="fichier1.html">fichier 1</a>
+        <br />
+        <a href="fichier2.html">fichier 2</a>
+        <br />
+        <a href="fichier3.html">fichier 3</a>
+        <br />
+        <a href="fichier4.html">fichier 4</a>
+    </body>
+</html>
